// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSelector should render correctly 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#9F8C82",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        {
          "backgroundColor": "#F56522",
          "borderColor": "#F56522",
        },
        {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  >
    <PeachText>
      one
    </PeachText>
  </TouchableOpacity>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#9F8C82",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        false,
        {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  >
    <PeachText>
      two
    </PeachText>
  </TouchableOpacity>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#9F8C82",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        false,
        {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  >
    <PeachText>
      three
    </PeachText>
  </TouchableOpacity>
</View>
`;

exports[`CustomSelector should render correctly when disabled 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    disabled={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#9F8C82",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        {
          "backgroundColor": "#F56522",
          "borderColor": "#F56522",
        },
        {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  >
    <PeachText>
      one
    </PeachText>
  </TouchableOpacity>
  <TouchableOpacity
    disabled={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#9F8C82",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        false,
        {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  >
    <PeachText>
      two
    </PeachText>
  </TouchableOpacity>
  <TouchableOpacity
    disabled={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#9F8C82",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        false,
        {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  >
    <PeachText>
      three
    </PeachText>
  </TouchableOpacity>
</View>
`;
